resources/assets/sass/page/_home.scss
#content {
  #main {
    
    padding: 20px 10px 10px 10px;
    height: 100%;

    h2 {
      margin-top: .2em;
      padding-top: .3em;
      padding-bottom: .3em;
      margin-bottom: .3em;
      border-bottom: 1px solid $light-gray;
    }
  }
  
  #welcome-view {
    @include fill-parent;
    @include row(table);

    @include sharp-gradient(white, $base-accent-color); // genius indeed

    overflow: hidden;

    .text {
      @include span-columns(8);
      @include pad();

      padding: 10px 10px 10px 10px;

      transform: skewX(-20deg);
      * { transform: skewX(20deg) }

      margin-right: 0;

      .right {
        text-align: right;
      }

      .center {

        a {
          color: black;

          &:hover {
            color: $dark-slate-gray;
          }
        }

        text-align: center;
      }
    }

    h3 {
      color: black;
      padding-left: 30px;
      padding-bottom: 5px;
    }

    .links {
      @include span-columns(4);
      @include reset-display;
      @include pad();

      background-color: $base-accent-color;

      transform: skewX(-20deg);

      div {
        transform: skewX(20deg);
        text-align: center;

        &:nth-child(2) {
          margin-top: 20px;
          padding-left: 50px;
        }

        a {
          color: black;
        }
      }
    }
  }

  #week-view, #announcements-view, #welcome-view #Goals-view{
    @include fill-parent;
  }

  #week-view {
    padding: 20px 20px 20px 20px;
  }

  .button-text {
    color: #ffffff;
  }

  .pulse-repeat {
    animation: pulse 1s infinite;
  }

  #announcements-view {
    background-color: white;

    padding: 20px 40px 20px 40px;

    div:first-child {
      @include fill-parent;

      border-top-left-radius: 5px;
      border-top-right-radius: 5px;

      height: 90px;
      background-color: $emphasis-color;
      text-align: center;

      h2 {
        color: black;
        line-height: 90px;
      }
    }
  }
  
  #GoalsTag{
        @include fill-parent;

        border-top-left-radius: 5px;
        border-top-right-radius: 5px;

        height: 90px;
        background-color: $emphasis-color;
    } 
    
  #Goals-view {
    background-color: white;

    padding: 20px 40px 20px 40px;

    
    
    div {
        text-align: center;
    }
    
    h2 {
      color: black;
      line-height: 90px;
    }
    
    h4 {
        text-align: center;
    }


    .icon {
      display: inline-block;
      font-weight: bold; 
      font-size: 16pt; 
      text-align: center; 
      max-width: 200px;
      width: 33.3%; 
      height: auto;
      margin-right: auto; 
      margin-left:auto; 
      margin-bottom: 50px;
    }

    h5 {
      font-weight: normal; 
      text-align: center;
    }
    
  }
}

.announcements {
  background-color: white;
  border-radius: 3px;
  padding: 10px;

  h3, h4, h5, h6 {
    color: $base-font-color;
  }

  h3 {
    padding-top: 10px;
    text-align: center;

    small {
      color: $medium-gray;
      font-size: .7em;
    }
  }
  
    h4 {
      padding-top: 10px;
      display:inline;
    }

  .date {
    text-align: center;
    font-style: italic;
    color: $medium-gray;
  }

  article {
    border-bottom: 2px solid $light-gray;
    padding: 5px 0;

    overflow-wrap: break-word;

    &:first-of-type {
      padding-top: 0;
    }

    &:last-of-type {
      border-bottom: none;
    }
  }
}


//ul.week {
  //height:50%;
//}

.dropdown {
  display: inline-block;
  margin-top: 0px;

  button {
    &:hover {
      background-color: $base-button-color;
    }
  }

  &:hover {

    .dropdown-content {
      display: block;
      margin-top: 0px;
    }
  }
}


div {
  .dropdown-content {
    display: none;
    position: absolute;
    background-color: $base-link-color;
    min-width: 160px;
    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
    z-index: 1;

    a {
      color: white;
      padding: 12px 16px;
      text-decoration: none;
      display: block;

      &:hover {
        background-color: $hover-dropdown-color
      }
    }
  }
}

